--- a/更多面试题.md
+++ b/更多面试题.md
@@ -1,12 +1,12 @@
 # 面试题 - 高阶版
 
-:::note
+
 
 **如果你现在是应届生正着急求职，或是社招急于跳槽。**
 
 **后面的内容你一定会感兴趣，因为它一定能帮助你解决就业问题。**
 
-:::
+
 
 你一定会有收获，斩获你心目中的Offer。
 
@@ -18,7 +18,7 @@
 
 自疫情解封以来，就业环境持续恶劣至今，工资也是断崖式往下降。
 
-:::danger[行情不好]
+行情不好
 
 最近几年，我发现网上哀嚎一片，尤其是应届生、工作经验1年左右的求职者，寻找一份 Unity 游戏客户端开发的工作真的巨难！
 
@@ -42,7 +42,7 @@
 
 也许你会疑惑，编写的这些内容跟网上的免费内容有什么区别呢？
 
-:::tip[节约时间，随时随地学习！]
+节约时间，随时随地学习！
 
 1. 你花大量时间在网上搜集海量面试题，**浪费时间** 且资料不一定准确！
 2. **《Unity面试宝典中》有大厂题集**，现在加入还能读到热乎乎的八股。
@@ -50,8 +50,6 @@
 4. 学会分析自身情况，深刻知道自己应该面向什么技术方向**精准地准备面试**，极大减少技术迷茫内耗。
 5. **购买一次终身享受技术分享**！**设有售后群**，不间断更新最前沿面试题。
 6. **支持电脑、手机、平板，方便随时随地卷！随时备战面试！**
-
-:::
 
 ![img](assets/1760943521380-d60f31d0-571d-4c56-bac5-39ad5383a5ef.png)
 
@@ -69,7 +67,7 @@
 
 ## 欢迎购买
 
-:::info[限时优惠，欢迎加购，冲刺高薪！]
+限时优惠，欢迎加购，冲刺高薪！
 
 到此如果你对《**Unity面试宝典**》感兴趣，欢迎关注我们！
 
@@ -83,7 +81,7 @@
 
 限时出售，后期将**不再向外出售**！将只会提供给 **Unity 高薪就业班学员**！
 
-:::
+
 
 
 
